--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.agava.yandexgames": "https://github.com/forcepusher/com.agava.yandexgames.git#13.0.0",
     "com.unity.collab-proxy": "1.17.6",
     "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
